Login API extended with login with user creation if not user not exist. Username & password authentication replaced auth. with firstname & lastname.
