# src/routes/user.js
@@ -20,7 +20,7 @@ const userRouter = (db) => {
             });
           } else {
             delete user.isAdmin;
-            delete user.password;
+            delete user.lastname;
             res.status(200).json(user);
           }
         }).catch((ex) => {
@@ -55,7 +55,7 @@ const userRouter = (db) => {
               });
             } else if (user && user.id === userId) {
               delete user.isAdmin;
-              delete user.password;
+              delete user.lastname;
               res.status(200).json(user);
             } else if (user) {
               res.status(401).json('Not authorized to see other users!');
